# BWG_TEST_ASSIGNMENT

./: .docker_env  .gitignore  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  redis_worker.py  yoyo.ini
docker_scripts/: app.sh
migrations/: 20240116_01_hGPK0-create-table-currency-pairs-id-serial-primary-key-symbol-varchar-not-null-price-float-not-null-time-timestamp-not-null.py
src/api/: __init__.py  index.py  routers.py
src/api/symbols/: __init__.py  get_all_symbols.py  get_history_of_one_symbol.py  get_history_of_one_symbol_paginated.py  get_last_data_of_symbol.py  get_one_symbol.py  router.py  update_all_symbols.py  update_one_symbol.py
src/api/users/: __init__.py  login.py
src/db/: db.py
src/migrations/: env.py
src/migrations/versions/: 2024_01_14_1725-4b807a463080_.py
src/models/: currency_pairs.py
src/repositories/: currency_pairs.py
src/schemas/: base.py  currency_pairs.py  request.py  response.py  users.py
src/services/: currency_pairs.py
src/utils/: binance_client.py  binance_websocket.py  repository.py  unitofwork.py
